--- a/src/analysis/notebooks/models.ipynb
+++ b/src/analysis/notebooks/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "34d2e14c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import itertools\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
